--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -15,7 +15,7 @@ else
   <ul>
   @foreach (Engineer engineer in Model)
     {
-      <li>@Html.ActionLink($"{engineer.Title}", "Details", new { id = engineer.EngineerId })
+      <li>@Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })
       </li>
     }
   </ul>
