Updated footer links

--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -13,5 +13,6 @@
 
   <input type="submit" value="Add new machine" class="btn btn-primary" />
 }
-<p>@Html.ActionLink("Show all machines", "Index")</p>
 <p>@Html.ActionLink("Add new machine", "Create")</p>
+<p>@Html.ActionLink("Back to List", "Index")</p>
+
