--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -15,4 +15,4 @@
 
   <input type="submit" value="Add new engineer" />
 }
-<p>@Html.ActionLink("Show all engineers", "Index")</p>
+<p>@Html.ActionLink("Back to List", "Index")</p>
