--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -21,5 +21,5 @@ else
   </ul>
 }
 
-<p>@Html.ActionLink("Add new item", "Create")</p>
+<p>@Html.ActionLink("Add new engineer", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
