--- a/Factory/Views/Machines/AddEngineer.cshtml
+++ b/Factory/Views/Machines/AddEngineer.cshtml
@@ -6,14 +6,14 @@
 
 <h2>Add an Engineer</h2>
 
-<h4>Assign an engineer to this machine: @Html.DisplayFor(model => model.Title)</h4>
 @if (ViewBag.EngineerCount == 0)
 {
-  <p>You have not added any engineers yet! Please add them <span>@Html.ActionLink("here", "Index", "Engineers")</span>
-</p>
+  <h4>You have not added any engineers yet! Please add them <span>@Html.ActionLink("here", "Index", "Engineers")</span>
+</h4>
 }
 else
 {
+  <h4>Assign an engineer to this machine: @Html.DisplayFor(model => model.Title)</h4>
   @using (Html.BeginForm())
   {
     @Html.HiddenFor(model => model.MachineId)
