Added links to machine and engineer

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -19,7 +19,7 @@ else
   <ul>
   @foreach (EngineerMachine join in Model.JoinEntities)
     {
-      <li>@join.Engineer.Name</li>
+      <li>@Html.ActionLink(join.Engineer.Name, "Details", "Engineers", new {id = join.Engineer.EngineerId}) </li>
       @using (Html.BeginForm("DeleteJoin", "Tags"))
       {
         @Html.Hidden("joinId", @join.EngineerMachineId)
@@ -32,5 +32,4 @@ else
 <p>@Html.ActionLink("Add an Engineer", "AddEngineer", new { id = Model.MachineId })</p>
 <p>@Html.ActionLink("Edit Machine", "Edit", new { id = Model.MachineId })</p>
 <p>@Html.ActionLink("Delete Machine", "Delete", new { id = Model.MachineId })</p>
-<p>@Html.ActionLink("Back to list", "Index")</p>
 
