--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -19,7 +19,7 @@ else
   <ul>
   @foreach (EngineerMachine join in Model.JoinEntities)
     {
-      <li>Machine: @join.Machine.Title</li>
+      <li>@Html.ActionLink(join.Machine.Title, "Details", "Machines", new {id = join.Machine.MachineId}) </li>
       @using (Html.BeginForm("DeleteJoin", "Engineers"))
       {
         @Html.Hidden("joinId", @join.EngineerMachineId)
@@ -32,4 +32,3 @@ else
 <p>@Html.ActionLink("Edit Engineer", "Edit", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("Add a machine", "AddMachine", new { id = Model.EngineerId })</p>
 <p>@Html.ActionLink("Delete engineer", "Delete", new { id = Model.EngineerId })</p>
-<p>@Html.ActionLink("Back to list", "Index")</p>
