--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -20,9 +20,10 @@ else
   @foreach (EngineerMachine join in Model.JoinEntities)
     {
       <li>@Html.ActionLink(join.Engineer.Name, "Details", "Engineers", new {id = join.Engineer.EngineerId}) </li>
-      @using (Html.BeginForm("DeleteJoin", "Tags"))
+      @using (Html.BeginForm("DeleteJoin", "Machines"))
       {
         @Html.Hidden("joinId", @join.EngineerMachineId)
+        @Html.Hidden("machineId", Model.MachineId)
         <input type="submit" value="Delete" />
       }
     }
