--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -11,6 +11,14 @@
   @Html.LabelFor(model => model.Title)
   @Html.TextBoxFor(model => model.Title)
 
+  @Html.LabelFor(model => model.Status)
+  <select name="Status" id="Status">
+  <option value="0">Operational</option>
+  <option value="1">Malfunctioning</option>
+  <option value="2">Being Repaired</option>
+</select>
+
+
   <input type="submit" value="Add new machine" />
 }
 <p>@Html.ActionLink("Back to List", "Index")</p>
