--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -8,6 +8,18 @@
 <h2>Machines Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)</h3>
+@if (Model.Status == 0)
+{
+  <h4>Current Status: Operational</h4>
+}
+else if (Model.Status == 1)
+{
+  <h4>Current Status: Malfunctioning</h4>
+}
+else
+{
+  <h4>Current Status: Being Repaired</h4>
+}
 
 @if (@Model.JoinEntities.Count == 0)
 {
@@ -33,4 +45,6 @@ else
 <p>@Html.ActionLink("Add an Engineer", "AddEngineer", new { id = Model.MachineId })</p>
 <p>@Html.ActionLink("Edit Machine", "Edit", new { id = Model.MachineId })</p>
 <p>@Html.ActionLink("Delete Machine", "Delete", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Back to List", "Index")</p>
+
 
