--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -15,6 +15,13 @@
   @Html.LabelFor(model => model.Title)
   @Html.EditorFor(model => model.Title)
 
+  @Html.LabelFor(model => model.Status)
+  <select name="Status" id="Status">
+  <option value="0">Operational</option>
+  <option value="1">Malfunctioning</option>
+  <option value="2">Being Repaired</option>
+</select>
+
   <input type="submit" value="Save" />
 }
 
