--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -5,7 +5,6 @@
 @using Factory.Models;
 
 <h1>Engineers</h1>
-
 @if (@Model.Count == 0)
 {
   <h3>No engineers have been added yet!</h3>
@@ -35,8 +34,8 @@ else
           }
         </td>
         <td>
-          @Html.ActionLink("Edit", "Edit", new { id = engineer.EngineerId })
-          @Html.ActionLink("Delete", "Delete", new { id = engineer.EngineerId })
+          @Html.ActionLink("Edit", "Edit", new { id = engineer.EngineerId }, new {@class = "btn btn-warning"})
+          @Html.ActionLink("Delete", "Delete", new { id = engineer.EngineerId }, new {@class = "btn btn-danger"})
         </td>
       </tr>
       @* <li>@Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })
@@ -45,5 +44,6 @@ else
   </table>
 }
 
-<p>@Html.ActionLink("Add new engineer", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<br>
+<a href="Engineers/Create"><button type="button" class="btn btn-primary btn-sm">Add New Engineer</button></a>
+<a href="/"><button type="button" class="btn btn-primary btn-sm">Home</button></a>
