Added table to Machine

--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -10,11 +10,43 @@
 {
   <h3>No tags have been added yet!</h3>
 }
-
-@foreach (Machine machine in Model)
+else
 {
-  <li>@Html.ActionLink($"{machine.Title}", "Details", new { id = machine.MachineId })</li>
+  <table>
+  <tr>
+    <th>Machine</th>
+    <th>Status</th>
+    <th>Actions</th>
+  </tr>
+  @foreach (Machine machine in Model)
+    {
+      <tr>
+        <td>
+          @Html.ActionLink($"{machine.Title}", "Details", new { id = machine.MachineId })
+        </td>
+        <td>
+          @if (machine.Status == 0)
+          {
+            <div class="idle">Operational</div>
+          }
+          else if (machine.Status == 2)
+          {
+            <div class="caution">Under Repair</div>
+          }
+          else
+          {
+            <div class="busy">Malfunctioning</div>
+          }
+        </td>
+        <td>
+          @Html.ActionLink("Edit", "Edit", new { id = machine.MachineId }, new {@class = "btn btn-warning"})
+          @Html.ActionLink("Delete", "Delete", new { id = machine.MachineId }, new {@class = "btn btn-danger"})
+        </td>
+      </tr>
+    }
+  </table>
 }
 
-<p>@Html.ActionLink("Add new machine", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<br>
+<a href="Machines/Create"><button type="button" class="btn btn-primary btn-sm">Add New Machine</button></a>
+<a href="/"><button type="button" class="btn btn-primary btn-sm">Home</button></a>
