--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -1,5 +1,5 @@
 table {
-  width: 80%;
+  width: auto;
   text-align: center;
 }
 
@@ -22,6 +22,11 @@ tr:hover {
   color: red;
   background-color: pink;
 }
+
+h1 {
+  text-align: center;
+}
+
 
 .idle {
   color: darkgreen;
