--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -4,44 +4,50 @@
 
 @using Factory.Models;
 
-<h1>Engineers</h1>
-@if (@Model.Count == 0)
-{
-  <h3>No engineers have been added yet!</h3>
-}
-else
-{
-  <table>
-  <tr>
-    <th>Name</th>
-    <th>Status</th>
-    <th>Actions</th>
-  </tr>
-  @foreach (Engineer engineer in Model)
-    {
-      <tr>
-        <td>
-          @Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })
-        </td>
-        <td>
-          @if (engineer.isBusy == false)
-          {
-            <div class="idle">Idle</div>
-          }
-          else
-          {
-            <div class="busy">Busy</div>
-          }
-        </td>
-        <td>
-          @Html.ActionLink("Edit", "Edit", new { id = engineer.EngineerId }, new {@class = "btn btn-warning"})
-          @Html.ActionLink("Delete", "Delete", new { id = engineer.EngineerId }, new {@class = "btn btn-danger"})
-        </td>
-      </tr>
-    }
-  </table>
-}
 
-<br>
-<a href="Engineers/Create"><button type="button" class="btn btn-primary btn-sm">Add New Engineer</button></a>
-<a href="/"><button type="button" class="btn btn-primary btn-sm">Home</button></a>
+<h1>Engineers</h1>
+<hr>
+<div class="container">
+  <div class="row">
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    }
+    else
+    {
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Status</th>
+          <th>Actions</th>
+        </tr>
+        @foreach (Engineer engineer in Model)
+        {
+          <tr>
+            <td>
+              @Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })
+            </td>
+            <td>
+              @if (engineer.isBusy == false)
+              {
+                <div class="idle">Idle</div>
+              }
+              else
+              {
+                <div class="busy">Busy</div>
+              }
+            </td>
+            <td>
+              @Html.ActionLink("Edit", "Edit", new { id = engineer.EngineerId }, new {@class = "btn btn-warning"})
+              @Html.ActionLink("Delete", "Delete", new { id = engineer.EngineerId }, new {@class = "btn btn-danger"})
+            </td>
+          </tr>
+        }
+      </table>
+    }
+  </div>
+  <br>
+  <a href="Engineers/Create"><button type="button" class="btn btn-primary btn-sm">Add New Engineer</button></a>
+  <a href="/"><button type="button" class="btn btn-primary btn-sm">Home</button></a>
+</div>
+
