--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -5,48 +5,54 @@
 @using Factory.Models;
 
 <h1>Machines</h1>
+<hr>
 
-@if (@Model.Count == 0)
-{
-  <h3>No tags have been added yet!</h3>
-}
-else
-{
-  <table>
-  <tr>
-    <th>Machine</th>
-    <th>Status</th>
-    <th>Actions</th>
-  </tr>
-  @foreach (Machine machine in Model)
+<div class="container">
+  <div class="row">
+    @if (@Model.Count == 0)
     {
-      <tr>
-        <td>
-          @Html.ActionLink($"{machine.Title}", "Details", new { id = machine.MachineId })
-        </td>
-        <td>
-          @if (machine.Status == 0)
-          {
-            <div class="idle">Operational</div>
-          }
-          else if (machine.Status == 2)
-          {
-            <div class="caution">Under Repair</div>
-          }
-          else
-          {
-            <div class="busy">Malfunctioning</div>
-          }
-        </td>
-        <td>
-          @Html.ActionLink("Edit", "Edit", new { id = machine.MachineId }, new {@class = "btn btn-warning"})
-          @Html.ActionLink("Delete", "Delete", new { id = machine.MachineId }, new {@class = "btn btn-danger"})
-        </td>
-      </tr>
+      <h3>No tags have been added yet!</h3>
     }
-  </table>
-}
+    else
+    {
+      <table>
+        <tr>
+          <th>Machine</th>
+          <th>Status</th>
+          <th>Actions</th>
+        </tr>
+        @foreach (Machine machine in Model)
+        {
+          <tr>
+            <td>
+              @Html.ActionLink($"{machine.Title}", "Details", new { id = machine.MachineId })
+            </td>
+            <td>
+              @if (machine.Status == 0)
+              {
+                <div class="idle">Operational</div>
+              }
+              else if (machine.Status == 2)
+              {
+                <div class="caution">Under Repair</div>
+              }
+              else
+              {
+                <div class="busy">Malfunctioning</div>
+              }
+            </td>
+            <td>
+              @Html.ActionLink("Edit", "Edit", new { id = machine.MachineId }, new {@class = "btn btn-warning"})
+              @Html.ActionLink("Delete", "Delete", new { id = machine.MachineId }, new {@class = "btn btn-danger"})
+            </td>
+          </tr>
+        }
+      </table>
+    }
 
-<br>
-<a href="Machines/Create"><button type="button" class="btn btn-primary btn-sm">Add New Machine</button></a>
-<a href="/"><button type="button" class="btn btn-primary btn-sm">Home</button></a>
+    <br>
+  </div>
+  <br>
+  <a href="Machines/Create"><button type="button" class="btn btn-primary btn-sm">Add New Machine</button></a>
+  <a href="/"><button type="button" class="btn btn-primary btn-sm">Home</button></a>
+</div>
