--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -5,20 +5,24 @@
 @model Factory.Models.Machine
 
 <h4>Add a new machine</h4>
+<hr>
 <p>@Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger", @style = "font-weight: 600;"})</p>
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Title)
   @Html.TextBoxFor(model => model.Title)
+  <br>
   @Html.LabelFor(model => model.Status)
   <select name="Status" id="Status">
   <option value="0">Operational</option>
   <option value="1">Malfunctioning</option>
   <option value="2">Being Repaired</option>
 </select>
-
-
-  <input type="submit" value="Add new machine" />
+  <br>
+  <br>
+  <input type="submit" value="Add new machine" class="btn btn-success" />
 }
-<p>@Html.ActionLink("Back to List", "Index")</p>
+<hr>
+<a href="/Machines"><button type="button" class="btn btn-primary btn-sm">Back to List</button></a>
+
 
